deploy: d2defbb9d931750d3d458fb9e7a64741031c0285

--- a/print.html
+++ b/print.html
@@ -4460,8 +4460,9 @@ cp ~/.config/navicat/Premium/preferences.json ~/.config/navicat/Premium/preferen
 # Clear data in dconf
 dconf reset -f /com/premiumsoft/navicat-premium/
 # Remove data fields in config file
-sed -i -E 's/,?&quot;([A-Z0-9]+)&quot;:\{([^\}]+)},?//g' ~/.config/navicat/Premium/preferences.json## Links
+sed -i -E 's/,?&quot;([A-Z0-9]+)&quot;:\{([^\}]+)},?//g' ~/.config/navicat/Premium/preferences.json
 </code></pre>
+<h2 id="links"><a class="header" href="#links">Links</a></h2>
 <ul>
 <li><a href="https://www.postgresql.org/docs/current">Postgres Current Version Document</a></li>
 </ul>
