--- a/other-categories/algorithm/algorithm.html
+++ b/other-categories/algorithm/algorithm.html
@@ -199,8 +199,9 @@
 <p>就像图中所示，在新增节点时红色部分会被调整到新节点中，绿色部分保留在原本的节点中。</p>
 <p>在有大量节点的分布式环境中，这样调整的代价就会小很多。</p>
 <h3 id="虚拟节点"><a class="header" href="#虚拟节点">虚拟节点</a></h3>
-<p>在上面的内容中，很容易发现一个新的问题，那就是当节点的数量并不多的时候，很容易存在任务分配不均的情况，可能大量的任务落到的槽位会集中在某块区域，而其它区域的槽位则没有那么多的任务。这时候就需要引入虚拟节点了。</p>
-<h4 id="todo"><a class="header" href="#todo">TODO</a></h4>
+<p>在上面的内容中，很容易发现一个新的问题，那就是当节点的数量并不多的时候，很容易存在任务分配不均的情况，可能大量的任务落到的槽位会集中在某块区域，而其它区域的槽位则没有那么多的任务，当一个节点不堪重负被压垮后，那么压力会顺延给顺时针的下一个节点，形成雪崩。这时候就需要引入虚拟节点了。</p>
+<h4 id=""><a class="header" href="#"><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/consistent_hashing_4.png?raw=true" alt="CH4" /></a></h4>
+<p>比如对节点多次 hash 并取模，得到若干个槽位，这些槽位均代表该节点，那么就可以大大减轻任务分布不均的问题了。</p>
 
                     <div id="giscus-container"></div>
                 </main>
