deploy: d01bd06b0370c129e2915389384f697939e2dbb1

--- a/other-categories/algorithm/algorithm.html
+++ b/other-categories/algorithm/algorithm.html
@@ -201,7 +201,7 @@
 <h3 id="虚拟节点"><a class="header" href="#虚拟节点">虚拟节点</a></h3>
 <p>在上面的内容中，很容易发现一个新的问题，那就是当节点的数量并不多的时候，很容易存在任务分配不均的情况，可能大量的任务落到的槽位会集中在某块区域，而其它区域的槽位则没有那么多的任务，当一个节点不堪重负被压垮后，那么压力会顺延给顺时针的下一个节点，形成雪崩。这时候就需要引入虚拟节点了。</p>
 <h4 id=""><a class="header" href="#"><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/consistent_hashing_4.png?raw=true" alt="CH4" /></a></h4>
-<p>比如对节点多次 hash 并取模，得到若干个槽位，这些槽位均代表该节点，那么就可以大大减轻任务分布不均的问题了。</p>
+<p>比如对节点多次 hash 并取模（或者其它方式，比如对第一次 hash +1 并取模得到第二个槽位），得到若干个槽位，这些槽位均代表该节点，那么就可以大大减轻任务分布不均的问题了。</p>
 
                     <div id="giscus-container"></div>
                 </main>
