--- a/print.html
+++ b/print.html
@@ -233,7 +233,7 @@ $ ./zincobserve
   HTTP_User admin@m4n5ter.email
   HTTP_Passwd uoZ9nMUEywjSLAiP
 </code></pre>
-<p>这里的 [OUTPUT] 直接访问 http://<IP>:<Port> 在 ZO 的 WEB 界面选择采集（ingestion）后选择 fluent-bit 就能得到。<code>URL /api/{组织}/{数据流}/_json</code> ，这里的组织和数据流随便都行， 没有的话 ZO 会自动创建。</p>
+<p>这里的 [OUTPUT] 直接访问 http://<code>&lt;IP&gt;</code>:<code>&lt;Port&gt;</code> 在 ZO 的 WEB 界面选择采集（ingestion）后选择 fluent-bit 就能得到。<code>URL /api/{组织}/{数据流}/_json</code> ，这里的组织和数据流随便都行， 没有的话 ZO 会自动创建。</p>
 <pre><code class="language-bash">$ docker run -it --network host -v .:/data --rm --name fluent-bit cr.fluentbit.io/fluent/fluent-bit:2.1.1 \
 -c /data/config
 </code></pre>
