deploy: 884a6af81ee47ff8ddedb236866f4eff8ce3dcae

--- a/go/gin_zo.html
+++ b/go/gin_zo.html
@@ -186,7 +186,7 @@
 <p>ZO 使用 Rust 开发（他们家的 zincsearch 是用的 go），性能极高，<strong>存储成本仅仅为 elasticsearch 的 1/140</strong>。目前 ZO 的后端部分已经基本稳定，现在提出的 bugs 基本都是前端问题。虽然 ZO 从版本号来看还没有为生产做好准备，但是鉴于 zincsearch 的优良表现，我们完全可以相信 zinclabs 的能力（毕竟他们创立的目的就是为了开发一款世界上最好的日志搜索软件）。</p>
 <h2 id="将-gin-的日志输出到-zincobserve"><a class="header" href="#将-gin-的日志输出到-zincobserve">将 Gin 的日志输出到 ZincObserve</a></h2>
 <h3 id="zincbserve"><a class="header" href="#zincbserve">zincbserve</a></h3>
-<p>ZO 支持 win/linux/mac/docker/k8s ，这里我直接从 [github release](<a href="https://github.com/zinclabs/zincobserve/releases">Releases · zinclabs/zincobserve · GitHub</a>) 下载</p>
+<p>ZO 支持 win/linux/mac/docker/k8s ，这里我直接从 <a href="https://github.com/zinclabs/zincobserve/releases">Releases · zinclabs/zincobserve · GitHub</a> 下载</p>
 <pre><code class="language-bash">$ wget https://github.com/zinclabs/zincobserve/releases/download/v0.4.1/zincobserve-v0.4.1-linux-amd64.tar.gz
 $ tar zxvf zincobserve-v0.4.1-linux-amd64.tar.gz
 </code></pre>
